css/master.css
/* ... */
.main-box:hover::after {
  animation: main-right 1s linear forwards;
  -webkit-animation: main-right 1s linear forwards;
}
.main-box::before {
  content: "";
  position: absolute;
  top: 50%;
  left: -25%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: var(--main-color);
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  -o-border-radius: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  -o-transform: translate(-50%, -50%);
  z-index: -1;
  animation-fill-mode: forwards;
}
.main-box::after {
  content: "";
  position: absolute;
  top: 50%;
  right: -25%;
  transform: translate(50%, -50%);
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: var(--main-color);
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  -o-border-radius: 50%;
  -webkit-transform: translate(50%, -50%);
  -moz-transform: translate(50%, -50%);
  -ms-transform: translate(50%, -50%);
  -o-transform: translate(50%, -50%);
  z-index: -1;
  animation-fill-mode: forwards;
}

@keyframes main-left {
  50% {
    width: 10px;
    height: 10px;
    left: 0;
  }
  100% {
    border-radius: 0;
    width: 100%;
    left: 50%;
    height: 100%;
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    -ms-border-radius: 0;
    -o-border-radius: 0;
  }
}
@keyframes main-right {
  50% {
    width: 10px;
    height: 10px;
    right: 0;
  }
  100% {
    border-radius: 0;
    width: 100%;
    right: 50%;
    height: 100%;
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    -ms-border-radius: 0;
    -o-border-radius: 0;
  }
}

@keyframes main-color {
  100% {
    color: white;
  }
}

/* End Components */

/* End Variables */

/* Global Rules */

html {
  scroll-behavior: smooth;
}
body {
  font-family: "Cairo", sans-serif;
}
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}
a {
  text-decoration: none;
}
ul {
  list-style: none;
}
.container {
  padding-left: 15px;
  padding-right: 15px;
  margin-left: auto;
  margin-right: auto;
}
/* Small */
@media (min-width: 768px) {
  .container {
    width: 750px;
  }
}
/* Medium */
@media (min-width: 992px) {
  .container {
    width: 970px;
  }
}
/* Large */
@media (min-width: 1200px) {
  .container {
    width: 1170px;
  }
}

/* Global Rules */

/* Start Header */
header {
  height: 70px;
  background-color: #ffffff;
  display: flex;
  justify-content: center;
  align-items: center;
}
header .container {
  height: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
header .logo {
  flex: 1;
  height: 100%;
  display: flex;
  align-items: center;
}
header .logo a {
  font-weight: bold;
  color: var(--main-color);
  font-size: 26px;
}
header nav {
  display: flex;
  height: 100%;
  flex: 1;
}
header nav ul {
  flex: 1;
  height: 100%;
  display: flex;
  justify-content: space-between;
}
header nav ul li a {
  color: black;
}
header nav ul li {
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #555;
  font-size: 20px;
  position: relative;
  cursor: pointer;
  width: 100%;
}
header nav ul li::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  background-color: var(--main-color);
  height: 4px;
  width: 0%;
  transition: var(--main-transition);
  -webkit-transition: var(--main-transition);
  -moz-transition: var(--main-transition);
  -ms-transition: var(--main-transition);
  -o-transition: var(--main-transition);
}
header nav ul li::after {
  content: "";
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  -o-transform: translate(-50%, -50%);
  width: 0;
  height: 0;
  background-color: #ddd;
  opacity: 0.3;
}
header nav ul li:hover {
  color: var(--main-color);
}
header nav ul li:hover::after {
  width: 100%;
  height: 100%;
}
header nav ul li:hover::before {
  width: 100%;
}

header nav .menu:hover .box {
  opacity: 1;
  top: 70px;
  z-index: 3;
}
header .box {
  background-color: white;
  width: 100%;
  position: fixed;
  opacity: 0;
  top: 150px;
  left: 10%;
  width: 80%;
  height: 60%;
  z-index: -1;
  transition: var(--main-transition);
  -webkit-transition: var(--main-transition);
  -moz-transition: var(--main-transition);
  -ms-transition: var(--main-transition);
  -o-transition: var(--main-transition);
}
header .mega-menu {
  display: flex;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  justify-content: space-between;
  align-items: center;
  padding: 15px;
}

header .mega-menu::after {
  position: absolute;
  content: "";
  width: 100%;
  height: 5px;
  left: 0;
  bottom: 0;
  background-color: var(--main-color);
}
header .mega-menu .image {
  height: 100%;
  flex-basis: 45%;
}
header .mega-menu .image img {
  max-width: cover;
}
header .mega-menu .buttons {
  display: flex;
  flex: 1;
  height: 100%;
  gap: 3px;
  padding: 10px;
}
header .mega-menu .buttons .group {
  height: 100%;
  flex-basis: 49%;
}
header .mega-menu .buttons .group ul {
  height: 100%;
  padding: 20px;
  display: flex;
  flex-direction: column;
  gap: 3px;
}
header .mega-menu .buttons .group ul li {
  display: flex;
  align-items: center;
  height: 19%;
  color: var(--main-color);
  position: relative;
  cursor: pointer;
}
header .mega-menu .buttons .group ul li i {
  margin: 0 15px 0 0;
  font-size: 20px;
}
header .mega-menu .buttons .group ul li:not(:last-child) {
  border-bottom: 1px solid #999;
}
header .mega-menu .buttons .group ul li a {
  font-size: 16px;
  font-weight: bold;
}
/* ... */

